--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -1,7 +1,7 @@
 on:
   push:
     branches:
-      - main
+      - dev
 
 permissions:
   contents: write
@@ -17,3 +17,6 @@ jobs:
         with:
           token: ${{ secrets.PAT }}
           release-type: simple
+          target-branch: main
+          config-file: release-please-config.json
+          manifest-file: .release-please-manifest.json
