--- a/release-please-config.json
+++ b/release-please-config.json
@@ -1,9 +1,6 @@
 {
     "$schema": "https://raw.githubusercontent.com/googleapis/release-please/main/schemas/config.json",
     "release-type": "simple",
-    "packages": {
-        ".": {
-            "bump-patch-for-minor-pre-major": true
-        }
-    }
+    "bump-patch-for-minor-pre-major": true,
+    "packages": {}
 }
