--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -17,3 +17,5 @@ jobs:
         with:
           token: ${{ secrets.PAT }}
           release-type: simple
+          config-file: release-please-config.json
+          manifest-file: .release-please-manifest.json
