--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@mantine/core": "^7.12.0",
     "@mantine/hooks": "^7.12.0",
     "@tabler/icons-react": "^3.12.0",
+    "@tanstack/react-query": "^5.51.23",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
