--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -26,6 +26,7 @@
       "@/components/*": ["./src/components/*"],
       "@/hooks": ["./src/hooks"],
       "@/hooks/*": ["./src/hooks/*"],
+      "@/consts": ["./src/consts"],
     }
   },
   "include": ["src"]
