--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@mantine/hooks": "^7.12.0",
     "@tabler/icons-react": "^3.12.0",
     "@tanstack/react-query": "^5.51.23",
+    "framer-motion": "^11.5.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-ga4": "^2.1.0"
