--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -27,6 +27,7 @@
       "@/hooks": ["./src/hooks"],
       "@/hooks/*": ["./src/hooks/*"],
       "@/consts": ["./src/consts"],
+      "@/framer-motion": ["./src/framer-motion"],
     }
   },
   "include": ["src"]
